fix shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 html {
-  scrollbar-gutter: stable;
+  overflow-y: scroll;
 }
 
 :root {
